--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,20 @@ services:
     ports:
       - published: 5555
         target: 5432
+  backend:
+    build:
+      context: backend
+      dockerfile: Dockerfile
+    environment:
+      SPRING_PROFILES_ACTIVE: clean-db,migrate-db
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/task_db?currentSchema=task_schema
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_FLYWAY_ENABLED: "true"
+      SPRING_FLYWAY_LOCATIONS: classpath:db/migration
+      SPRING_FLYWAY_SCHEMAS: task_schema
+    ports:
+      - published: 8888
+        target: 8080
+    depends_on:
+      - db
