source ports from .env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,12 @@
 # db
+DB_PORTS_PUBLISHED=5555
+DB_PORTS_TARGET=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 # backend
+BACKEND_PORTS_PUBLISHED=8888
+BACKEND_PORTS_TARGET=8080
 SPRING_PROFILES_ACTIVE=clean-db,migrate-db
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/task_db?currentSchema=task_schema
 SPRING_DATASOURCE_USERNAME=postgres
