--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,8 @@ SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_FLYWAY_ENABLED=true
 SPRING_FLYWAY_LOCATIONS=classpath:db/migration
 SPRING_FLYWAY_SCHEMAS=task_schema
+
+# frontend
+FRONTEND_PORTS_PUBLISHED=9999
+FRONTEND_PORTS_TARGET=8080
+CHOKIDAR_USEPOLLING=true
