--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/task_db?currentSchema=task_schem
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_FLYWAY_ENABLED=true
-SPRING_FLYWAY_LOCATIONS=classpath:db/migration
+SPRING_FLYWAY_LOCATIONS=classpath:db/migration,classpath:db/data
 SPRING_FLYWAY_SCHEMAS=task_schema
 
 # frontend
