--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ POSTGRES_PASSWORD=postgres
 # backend
 BACKEND_PORTS_PUBLISHED=8888
 BACKEND_PORTS_TARGET=8080
+SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
 SPRING_PROFILES_ACTIVE=clean-db,migrate-db
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/task_db?currentSchema=task_schema
 SPRING_DATASOURCE_USERNAME=postgres
