--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,4 +1,5 @@
 SERVER_PORT=8888
+SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
 SPRING_PROFILES_ACTIVE=clean-db,migrate-db
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5555/task_db?currentSchema=task_schema
 SPRING_DATASOURCE_USERNAME=postgres
