--- a/.env.sample
+++ b/.env.sample
@@ -8,13 +8,14 @@ POSTGRES_PASSWORD=postgres
 BACKEND_PORTS_PUBLISHED=8888
 BACKEND_PORTS_TARGET=8080
 SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
-SPRING_PROFILES_ACTIVE=clean-db,migrate-db
 SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/task_db?currentSchema=task_schema
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_FLYWAY_ENABLED=true
 SPRING_FLYWAY_LOCATIONS=classpath:db/migration,classpath:db/data
 SPRING_FLYWAY_SCHEMAS=task_schema
+CUSTOM_FLYWAY_CLEAN=true
+CUSTOM_FLYWAY_MIGRATE=true
 
 # frontend
 FRONTEND_PORTS_PUBLISHED=9999
