--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,9 +1,10 @@
 SERVER_PORT=8888
 SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
-SPRING_PROFILES_ACTIVE=clean-db,migrate-db
 SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5555/task_db?currentSchema=task_schema
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_FLYWAY_ENABLED=true
 SPRING_FLYWAY_LOCATIONS=classpath:db/migration,classpath:db/data
 SPRING_FLYWAY_SCHEMAS=task_schema
+CUSTOM_FLYWAY_CLEAN=true
+CUSTOM_FLYWAY_MIGRATE=true
