--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     url: ${SPRING_DATASOURCE_URL}
     user: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
+custom:
+  flyway:
+    clean: ${CUSTOM_FLYWAY_CLEAN}
+    migrate: ${CUSTOM_FLYWAY_MIGRATE}
