use default flyway locations

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -4,7 +4,7 @@ SPRING_DATASOURCE_URL=jdbc:postgresql://localhost:5555/task_db?currentSchema=tas
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=postgres
 SPRING_FLYWAY_ENABLED=true
-SPRING_FLYWAY_LOCATIONS=classpath:db/migration,classpath:db/data
+SPRING_FLYWAY_LOCATIONS=classpath:db/migration
 SPRING_FLYWAY_SCHEMAS=task_schema
 CUSTOM_FLYWAY_CLEAN=true
 CUSTOM_FLYWAY_MIGRATE=true
